# cpp-raylib-base

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
include/: raylib.h  raymath.h  rlgl.h
src/: main.cpp
